[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xau-dl-engine"
version = "3.2.0"
description = "Hybrid Oracle-Manager Deep Reinforcement Learning Trading Architecture for XAUUSD"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "gymnasium>=0.28.1",
    "stable-baselines3>=2.1.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "matplotlib"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[tool.setuptools]
py-modules = ["export_tensorboard"]

[tool.setuptools.packages.find]
include = ["environment*", "features*", "models*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "N", "I", "W"]
ignore = ["E741"] # Allow high/low explicit terminology mapping safely

[tool.ruff.lint.isort]
known-first-party = ["environment", "features", "models"]